fix some bug - overflow: auto;

--- a/src/Сomponents/Comment/Comments.module.scss
+++ b/src/Сomponents/Comment/Comments.module.scss
@@ -62,3 +62,9 @@ $lime-green: #4fa19d;
     margin: 0 auto;
   }
 }
+
+@media screen and (max-width: 720px) {
+  .blockWrap {
+    width: 90%;
+  }
+}
